--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^16.9.53",
     "@types/react-native": "^0.63.30",
+    "@types/react-native-sqlite-storage": "^5.0.0",
     "@types/react-native-vector-icons": "^6.4.6",
     "babel-jest": "^26.6.1",
     "babel-plugin-root-import": "^6.6.0",
@@ -45,5 +46,5 @@
     "assets": [
       "./assets/Fonts/"
     ]
-   }
+  }
 }
