--- a/ios/VocaGlory2/Info.plist
+++ b/ios/VocaGlory2/Info.plist
@@ -39,6 +39,13 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Fonts/sd_gothic_b.ttf</string>
+		<string>Fonts/sd_gothic_m.ttf</string>
+		<string>Fonts/sd_gothic_l.ttf</string>
+		<string>Fonts/wdpron.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
