--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,8 @@ platform :ios, '10.0'
 target 'VocaGlory2' do
   config = use_native_modules!
 
+  pod ‘RNFBAdMob’, :path => ‘../node_modules/@react-native-firebase/admob’
+
   use_react_native!(:path => config["reactNativePath"])
 
   target 'VocaGlory2Tests' do
@@ -20,6 +22,13 @@ target 'VocaGlory2' do
   use_flipper!
   post_install do |installer|
     flipper_post_install(installer)
+
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+      end
+    end
+
   end
 end
 
