--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@react-native-firebase/app": "^8.4.7",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "react": "16.13.1",
-    "react-native": "0.63.3",
+    "react-native": "^0.64.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
